[package]

name = "mediaplayer"
version = "0.1.0"
authors = [ "mewlips@gmail.com" ]

[dependencies.sdl]

git = "https://github.com/brson/rust-sdl.git"

[dependencies.avformat55]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "avformat55"

[dependencies.swscale2]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "swscale2"

[dependencies.swresample0]

git = "https://github.com/mewlips/rust-ffmpeg.git"
path = "swresample0"

[[bin]]

name = "mediaplayer"
path = "src/main.rs"

